Basic starting point

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en-GB'>
   <head>
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <title>DoS-Info</title>
+    <link href='styles/dosinfo.css' rel='stylesheet' type='text/css' />
+    <script src='js/dosinfo.js' type='text/javascript' />
   </head>
   <body>
-    <h1>Information about denial-of-service attacks</h1>
-    <p>TODO</p>
+    <div class='header'>
+      <!-- TODO -->
+    </div>
+    <div class='wrapper'>
+      <!-- TODO -->
+    </div>
+    <div class='footer'>
+      <!-- TODO -->
+    </div>
   </body>
 </html>
