Added the header

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <title>DoS-Info</title>
     <link href='styles/dosinfo.css' rel='stylesheet' type='text/css' />
-    <script src='js/dosinfo.js' type='text/javascript' />
+    <script src='js/dosinfo.js' type='text/javascript'></script>
   </head>
   <body>
     <div class='header'>
-      <!-- TODO -->
+      <h1>Denial of Service Attacks</h1>
     </div>
     <div class='wrapper'>
       <!-- TODO -->
