--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     <script src='js/dosinfo.js' type='text/javascript'></script>
   </head>
   <body>
-    <div class='header'>
+    <div id='header'>
       <h1>Denial of Service Attacks</h1>
     </div>
     <div class='wrapper'>
       <!-- TODO -->
     </div>
-    <div class='footer'>
-      <!-- TODO -->
+    <div id='footer'>
+      <div class='names'>
+        <p>Bertie Wheen</p>
+        <p>Helen Crump</p>
+        <p>Peter Dakin</p>
+        <p>Harry Cross</p>
+      </div>
     </div>
   </body>
 </html>
