--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <div id='header'>
       <h1>Denial of Service Attacks</h1>
     </div>
-    <div class='wrapper'>
-      <!-- TODO -->
+    <div id='wrapper'>
+      <div id='leftsidebar'>
+        <!-- TODO -->
+      </div>
+      <div id='maincontent'>
+        <!-- TODO -->
+      </div>
+      <div id='rightsidebar'>
+        <!-- TODO -->
+      </div>
     </div>
     <div id='footer'>
       <div class='names'>
