Content and right sidebar will be loaded via ajax

--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
       <div id='leftsidebar'>
         <!-- TODO -->
       </div>
-      <div id='maincontent'>
-        <!-- TODO -->
-      </div>
-      <div id='rightsidebar'>
-        <!-- TODO -->
-      </div>
+      <div id='maincontent'></div>
+      <div id='rightsidebar'></div>
     </div>
     <div id='footer'>
       <div class='names'>
