--- a/index.html
+++ b/index.html
@@ -14,30 +14,37 @@
     </div>
     <div id='wrapper'>
       <div id='leftsidebar'>
-        <div id='introduction'>
+        <div class='sidebarbutton'>
           <p>Introduction</p>
         </div>  
-        <div id='modules'>
+        <div class='sidebarbutton'>
           <p>Modules</p>
         </div>
-        <div id='ddos'>
+        <div class='sidebarbutton'>
           <p>DDOS</p>
         </div>
-        <div id='legality'>
+        <div class='sidebarbutton'>
           <p>Legality</p>
         </div>
-        <div id='prevention'>
+        <div class='sidebarbutton'>
           <p>Prevention</p>
         </div>
-        <div id='examples'>
+        <div class='sidebarbutton'>
           <p>Examples</p>
         </div>
-        <div id='impacts'>
+        <div class='sidebarbutton'>
           <p>Impacts</p>
         </div>
       </div>
       <div id='maincontent'></div>
-      <div id='rightsidebar'></div>
+      <div id='rightsidebar'>
+        <div class='sidebarbutton'>
+          <p>Test</p>
+        </div>
+        <div class='sidebarbutton'>
+          <p>Test2</p>
+        </div>
+      </div>
     </div>
     <div id='footer'>
       <div class='names'>
