--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <title>DoS-Info</title>
     <link href='styles/dosinfo.css' rel='stylesheet' type='text/css' />
+    <link href='styles/normalize.css' rel='stylesheet' type='text/css' />
     <script src='js/dosinfo.js' type='text/javascript'></script>
   </head>
   <body>
@@ -59,13 +60,13 @@
           <p>Test2</p>
         </div>
       </div>
-    </div>
-    <div id='footer'>
-      <div class='names'>
-        <p>Bertie Wheen</p>
-        <p>Helen Crump</p>
-        <p>Peter Dakin</p>
-        <p>Harry Cross</p>
+      <div id='footer'>
+        <div class='names'>
+          <p>Bertie Wheen</p>
+          <p>Helen Crump</p>
+          <p>Peter Dakin</p>
+          <p>Harry Cross</p>
+        </div>
       </div>
     </div>
   </body>
