--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>DoS-Info</title>
     <link href='styles/dosinfo.css' rel='stylesheet' type='text/css' />
     <link href='styles/normalize.css' rel='stylesheet' type='text/css' />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src='js/dosinfo.js' type='text/javascript'></script>
   </head>
   <body>
@@ -17,7 +18,7 @@
       <div id='leftsidebar'>
         <div class='sidebarbutton'>
           <p>Introduction</p>
-        </div>  
+        </div>
         <div class='sidebarbutton'>
           <p>Modules</p>
         </div>
