Base for file loading

--- a/index.html
+++ b/index.html
@@ -16,27 +16,13 @@
     </div>
     <div id='wrapper'>
       <div id='leftsidebar'>
-        <div class='sidebarbutton'>
-          <p>Introduction</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>Modules</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>DDOS</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>Legality</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>Prevention</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>Examples</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>Impacts</p>
-        </div>
+        <div class='sidebarbutton'>Introduction</div>
+        <div class='sidebarbutton'>Modules</div>
+        <div class='sidebarbutton'>DDOS</div>
+        <div class='sidebarbutton'>Legality</div>
+        <div class='sidebarbutton'>Prevention</div>
+        <div class='sidebarbutton'>Examples</div>
+        <div class='sidebarbutton'>Impacts</div>
       </div>
       <div id='maincontent'>
         <div class='section'>
@@ -54,12 +40,8 @@
         </div>
       </div>
       <div id='rightsidebar'>
-        <div class='sidebarbutton'>
-          <p>Test</p>
-        </div>
-        <div class='sidebarbutton'>
-          <p>Test2</p>
-        </div>
+        <div class='sidebarbutton'>Test</div>
+        <div class='sidebarbutton'>Test2</div>
       </div>
       <div id='footer'>
         <div class='names'>
