Loading pages with AJAX

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     <div id='wrapper'>
       <div id='leftsidebar'>
-        <div class='sidebarbutton'>Introduction</div>
-        <div class='sidebarbutton'>Modules</div>
-        <div class='sidebarbutton'>DDOS</div>
-        <div class='sidebarbutton'>Legality</div>
-        <div class='sidebarbutton'>Prevention</div>
-        <div class='sidebarbutton'>Examples</div>
-        <div class='sidebarbutton'>Impacts</div>
+        <div class='sidebarbutton' id='intro'>Introduction</div>
+        <div class='sidebarbutton' id='modules'>Modules</div>
+        <div class='sidebarbutton' id='ddos'>DDOS</div>
+        <div class='sidebarbutton' id='legality'>Legality</div>
+        <div class='sidebarbutton' id='prevention'>Prevention</div>
+        <div class='sidebarbutton' id='examples'>Examples</div>
+        <div class='sidebarbutton' id='impacts'>Impacts</div>
       </div>
       <div id='maincontent'>
         <div class='section'>
