--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class='sidebarbutton' id='legality'>Legality</div>
         <div class='sidebarbutton' id='prevention'>Prevention</div>
         <div class='sidebarbutton' id='examples'>Examples</div>
+        <div class='sidebarbutton' id='methods'>Methods</div>
         <div class='sidebarbutton' id='impacts'>Impacts</div>
       </div>
       <div id='maincontent'></div>
