Right sidebar populates automagically

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         <div class='sidebarbutton' id='impacts'>Impacts</div>
       </div>
       <div id='maincontent'></div>
-      <div id='rightsidebar'>
-        <div class='sidebarbutton'>Test</div>
-        <div class='sidebarbutton'>Test2</div>
-      </div>
+      <div id='rightsidebar'></div>
       <div id='footer'>
         <div class='names'>
           <p>Bertie Wheen</p>
