Extra CSS, message if javascript is disabled

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <div class='sidebarbutton' id='methods'>Methods</div>
         <div class='sidebarbutton' id='impacts'>Impacts</div>
       </div>
-      <div id='maincontent'></div>
+      <div id='maincontent'>
+        <div class='section'>
+          <p>Javascript is required to view this page.</p>
+        </div>
+      </div>
       <div id='rightsidebar'></div>
       <div id='footer'>
         <div class='names'>
