Rolling back html

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   </head>
   <body>
     <div id='header'>
-      <img src="styles/gfxAssets/DoSbanner.png" alt="Denial of Service Attacks" />
+      <h1>Denial of Service Attacks</h1>
     </div>
     <div id='wrapper'>
       <div id='leftsidebar'>
-        <div class='sidebarbutton' id='intro'><img src="styles/gfxAssets/introup.png" alt="Introduction" /></div>
-        <div class='sidebarbutton' id='legality'><img src="styles/gfxAssets/legalup.png" alt="Legality" /></div>
-        <div class='sidebarbutton' id='prevention'><img src="styles/gfxAssets/preventup.png" alt="Prevention" /></div>
-        <div class='sidebarbutton' id='examples'><img src="styles/gfxAssets/examplesup.png" alt="Examples" /></div>
-        <div class='sidebarbutton' id='methods'><img src="styles/gfxAssets/methodsup.png" alt="Methods" /></div>
-        <div class='sidebarbutton' id='impacts'><img src="styles/gfxAssets/impactsup.png" alt="Impacts" /></div>
+        <div class='sidebarbutton' id='intro'>Introduction</div>
+        <div class='sidebarbutton' id='legality'>Legality</div>
+        <div class='sidebarbutton' id='prevention'>Prevention</div>
+        <div class='sidebarbutton' id='examples'>Examples</div>
+        <div class='sidebarbutton' id='methods'>Methods</div>
+        <div class='sidebarbutton' id='impacts'>Impacts</div>
       </div>
       <div id='maincontent'>
         <div class='section'>
@@ -32,10 +32,10 @@
       <div id='rightsidebar'></div>
       <div id='footer'>
         <div class='names'>
-          <p>Bertrand Wheen</p>
-          <p>Hilin Crump</p>
+          <p>Bertie Wheen</p>
+          <p>Helen Crump</p>
           <p>Peter Dakin</p>
-          <p>Hazza Cross</p>
+          <p>Harry Cross</p>
         </div>
       </div>
     </div>
