--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id='header'>
-      <h1>Denial of Service Attacks</h1>
+      <img src="styles/gfxAssets/DoSbanner.png" alt="Denial of Service Attacks" />
     </div>
     <div id='wrapper'>
       <div id='leftsidebar'>
