Konami code in footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
           <p>Peter Dakin</p>
           <p>Harry Cross</p>
         </div>
+        <div class='names'>
+          <p>↑</p>
+          <p>↑</p>
+          <p>↓</p>
+          <p>↓</p>
+          <p>←</p>
+          <p>→</p>
+          <p>←</p>
+          <p>→</p>
+          <p>B</p>
+          <p>A</p>
       </div>
     </div>
   </body>
