Readded and improved graphics.
No functionality or alignment-accuracy loss. All final graphics added.
Including 3 for each button state and footer text.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       </div>
       <div id='rightsidebar'></div>
       <div id='footer'>
-        <div class='names'>
+      <!--  <div class='names'>
           <p>Bertie Wheen</p>
           <p>Helen Crump</p>
           <p>Peter Dakin</p>
           <p>Harry Cross</p>
-        </div>
+        </div>-->
+        <img src="styles/gfxAssets/footer.png" />
         <div class='names'>
           <p>↑</p>
           <p>↑</p>
