Final Style commit.
Small bugfixes/alignment adjusts (text overlap in right-sidebar is
gone).

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>-->
         <img src="styles/gfxAssets/footer.png" />
         <div class='names'>
+          <p>Cheat Code </p>
           <p>↑</p>
           <p>↑</p>
           <p>↓</p>
