--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class='sidebarbutton' id='methods'>Methods</div>
         <div class='sidebarbutton' id='impacts'>Impacts</div>
       </div>
+    </div>
       <div id='maincontent'>
         <div class='section'>
           <p>Javascript is required to view this page.</p>
@@ -38,7 +39,7 @@
           <p>Peter Dakin</p>
           <p>Harry Cross</p>
         </div>-->
-        <img src="styles/gfxAssets/footer.png" />
+        <img src="styles/gfxAssets/footer.png" alt="footer"/>
         <div class='names'>
           <p>Cheat Code </p>
           <p>↑</p>
